@@ -472,7 +472,8 @@ This Work includes contributions authored by David E. Jones, not as a
             </xs:attribute>
             <xs:attribute name="id" type="xs:string" use="required"/>
             <xs:attribute name="title" type="xs:string"/>
-            <xs:attribute name="width" type="xs:string" default="200px"/>
+            <xs:attribute name="width" type="xs:string"/>
+            <xs:attribute name="header-menus-id" type="xs:string" default="header-menus"/>
         </xs:complexType>
     </xs:element>
     <xs:element name="subscreens-active" substitutionGroup="AllWidgets">
@@ -492,8 +493,9 @@ This Work includes contributions authored by David E. Jones, not as a
             </xs:attribute>
             <xs:attribute name="id" type="xs:string" use="required"/>
             <xs:attribute name="title" type="xs:string"/>
-            <xs:attribute name="menu-width" type="xs:string" default="200px"/>
+            <xs:attribute name="menu-width" type="xs:string"/>
             <xs:attribute name="dynamic" type="boolean" default="false"/>
+            <xs:attribute name="header-menus-id" type="xs:string" default="header-menus"/>
         </xs:complexType>
     </xs:element>
 
